--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
+    "strictPropertyInitialization": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   }
